# ggsql

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  INSTALLERS.md  LICENSE.md  README.md  entitlements.plist
.github/workflows/: R-CMD-check.yaml  autofmt.yaml  build.yaml  publish.yaml  python-release.yml  python.yml  release-installers.yml  release-jupyter.yml  release-packages.yml  release-python.yml  release-vscode.yaml  wasm.yaml
.github/workflows/actions/fix-macos-wheel-dylibs/: action.yml
doc/: .gitignore  CLAUDE.md  _brand.yml  _quarto.yml  examples.qmd  ggsql.xml  index.qmd  installation.qmd  styles.scss
doc/gallery/examples/: minard.qmd  pie-chart.qmd
doc/get_started/: installation.qmd
doc/get_started/tooling/: cli.qmd  index.qmd  jupyter-quarto.qmd  positron-vscode.qmd  python.qmd  r.qmd  webassembly.qmd
doc/syntax/: _metadata.yml  index.qmd
doc/syntax/clause/: draw.qmd  facet.qmd  label.qmd  place.qmd  project.qmd  scale.qmd  visualise.qmd
doc/syntax/coord/: cartesian.qmd  polar.qmd
doc/syntax/layer/: errorbar.qmd  line.qmd  linear.qmd  point.qmd  rule.qmd  segment.qmd  text.qmd
doc/syntax/layer/position/: jitter.qmd
doc/syntax/layer/type/: area.qmd  bar.qmd  boxplot.qmd  errorbar.qmd  histogram.qmd  line.qmd  linear.qmd  path.qmd  point.qmd  polygon.qmd  range.qmd  rect.qmd  ribbon.qmd  rule.qmd  segment.qmd  smooth.qmd  spatial.qmd  text.qmd  tile.qmd  violin.qmd
doc/syntax/scale/aesthetic/: 0_position.qmd  Z_facetting.qmd  linetype.qmd  shape.qmd
doc/syntax/scale/type/: binned.qmd  continuous.qmd  discrete.qmd  identity.qmd  ordinal.qmd
ggsql-R/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
ggsql-R/R/: engine.R  ggsql-package.R
ggsql-R/inst/: test_chunks.qmd
ggsql-R/man/: ggsql-package.Rd
ggsql-R/tests/: testthat.R
ggsql-R/tests/testthat/: test-engine.R
ggsql-R/tests/testthat/_snaps/engine/: test_chunks.md
ggsql-cli/: CLAUDE.md  Cargo.toml  build.rs
ggsql-cli/src/: main.rs
ggsql-jupyter/: CLAUDE.md  Cargo.toml  README.md  pyproject.toml
ggsql-jupyter/src/: connection.rs  data_explorer.rs  display.rs  executor.rs  kernel.rs  lib.rs  main.rs  message.rs  util.rs
ggsql-jupyter/tests/: README.md  requirements.txt  test_compliance.py  test_integration.py
ggsql-jupyter/tests/fixtures/: connection.json  sample_notebook.ipynb  test_queries.sql
ggsql-jupyter/tests/quarto/: doc.qmd
ggsql-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
ggsql-python/python/ggsql/: __init__.py
ggsql-python/src/: lib.rs
ggsql-python/tests/: test_altair_e2e.py  test_ggsql.py
ggsql-vscode/: .vscodeignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
ggsql-vscode/examples/: sample.gsql
ggsql-vscode/src/: connections.ts  extension.ts  manager.ts  types.ts
ggsql-vscode/syntaxes/: ggsql.tmLanguage.json
ggsql-wasm/: CLAUDE.md  Cargo.toml  build-wasm.sh
ggsql-wasm/demo/: build.mjs  package-lock.json  package.json  tsconfig.json
ggsql-wasm/demo/src/: context.ts  editor.ts  examples.ts  index.html  main.ts  styles.css  tableManager.ts  wasmBase.ts
ggsql-wasm/demo/src/quarto/: editor.ts  links.ts  main.ts  styles.css
ggsql-wasm/src/: lib.rs
src/: CHANGELOG.md  CLAUDE.md  Cargo.toml  api.rs  array_util.rs  build.rs  cli.rs  compute.rs  dataframe.rs  execute.rs  format.rs  lib.rs  naming.rs  rest.rs  util.rs  validate.rs
src/data/: airquality.parquet
src/doc/: API.md
src/execute/: casting.rs  cte.rs  layer.rs  mod.rs  position.rs  scale.rs  schema.rs
src/parser/: ast.rs  builder.rs  error.rs  mod.rs  source_tree.rs  splitter.rs
src/plot/: CLAUDE.md  aesthetic.rs  main.rs  mod.rs  types.rs
src/plot/facet/: mod.rs  resolve.rs  types.rs
src/plot/layer/: mod.rs  orientation.rs
src/plot/layer/geom/: area.rs  arrow.rs  bar.rs  boxplot.rs  density.rs  errorbar.rs  histogram.rs  hline.rs  label.rs  line.rs  linear.rs  mod.rs  path.rs  point.rs  polygon.rs  range.rs  rect.rs  ribbon.rs  rule.rs  segment.rs  smooth.rs  spatial.rs  stat_aggregate.rs  text.rs  tile.rs  types.rs  violin.rs  vline.rs
src/plot/layer/position/: dodge.rs  identity.rs  jitter.rs  stack.rs
src/plot/projection/: mod.rs  resolve.rs  types.rs
src/plot/projection/coord/: cartesian.rs  map.rs  map_projections.rs  mod.rs  polar.rs
src/plot/scale/: breaks.rs  mod.rs  shape.rs
src/plot/scale/scale_type/: binned.rs  continuous.rs  discrete.rs  identity.rs  mod.rs  ordinal.rs
src/plot/scale/transform/: date.rs  integer.rs  mod.rs
src/reader/: connection.rs  data.rs  duckdb.rs  mod.rs  odbc.rs  sqlite.rs
src/reader/odbc/: ffi.rs  mod.rs  snowflake.rs  wrapper.rs
src/writer/: mod.rs  vegalite.rs
src/writer/vegalite/: CLAUDE.md  coord.rs  data.rs  encoding.rs  layer.rs  mod.rs  projection.rs
src/writer/vegalite/projection/: map.rs  mod.rs  polar.rs
tree-sitter-ggsql/: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-ggsql/bindings/c/: tree-sitter-ggsql.pc.in
tree-sitter-ggsql/bindings/c/tree_sitter/: tree-sitter-ggsql.h
tree-sitter-ggsql/bindings/node/: binding.cc  binding_test.js  index.js
tree-sitter-ggsql/bindings/python/: __init__.py  binding.c  py.typed
tree-sitter-ggsql/bindings/rust/: build.rs  lib.rs
tree-sitter-ggsql/bindings/rust/wasm-sysroot/src/: stdio.c  stdlib.c
tree-sitter-ggsql/queries/: highlights.scm
tree-sitter-ggsql/test/corpus/: basic.txt
