[workspace]
members = [
    "tree-sitter-ggsql",
    "src",
    "ggsql-jupyter",
    "ggsql-python",
    "ggsql-wasm"
]
# ggsql-python is excluded from default builds because it's a PyO3 extension
# that requires Python dev headers. Build it separately with maturin.
default-members = [
    "tree-sitter-ggsql",
    "src",
    "ggsql-jupyter"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ggsql Team"]
license = "MIT"
repository = "https://github.com/posit-dev/ggsql"
homepage = "https://ggsql.org"
description = "A declarative visualization language that extends SQL with powerful data visualization capabilities."

[workspace.dependencies]
# workspace packages
tree-sitter-ggsql = { path = "tree-sitter-ggsql", version = "0.1.0" }
ggsql = { path = "src", version = "0.1.0" }

# Parsing
csscolorparser = "0.8.1"
tree-sitter = "0.26"

# Data processing
polars = { version = "0.52", default-features = false }
polars-ops = { version = "0.52", features = ["pivot"] }

# Readers
duckdb = { version = "~1.4", features = ["bundled", "vtab-arrow"] }
arrow = { version = "56", default-features = false, features = ["ipc"] }
postgres = "0.19"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "functions", "window"] }

# Writers
plotters = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Python bindings
pyo3 = "0.26"

# Testing
proptest = "1.4"

# Color interpolation
palette = "0.7"

# Utilities
regex = "1.10"
chrono = "0.4"
rand = "0.8"
const_format = "0.2"
uuid = { version = "1.0", features = ["v4"] }

# Web server
axum = "0.7"
tokio = { version = "1.35", default-features = false }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
