[workspace]
members = [
    "tree-sitter-ggsql",
    "src",
    "ggsql-cli",
    "ggsql-jupyter",
    "ggsql-wasm"
]
default-members = [
    "tree-sitter-ggsql",
    "src",
    "ggsql-cli",
    "ggsql-jupyter"
]
resolver = "2"

[workspace.package]
version = "0.2.7"
edition = "2021"
authors = ["ggsql Team"]
license = "MIT"
repository = "https://github.com/posit-dev/ggsql"
homepage = "https://ggsql.org"
description = "A declarative visualization language that extends SQL with powerful data visualization capabilities."

[workspace.dependencies]
# workspace packages
tree-sitter-ggsql = { path = "tree-sitter-ggsql", version = "0.2.7" }
ggsql = { path = "src", version = "0.2.7" }

# Parsing
csscolorparser = "0.8.1"
tree-sitter = "0.26"

# Data container
arrow = { version = "56", default-features = false, features = ["ipc"] }

# Readers
duckdb = { version = "~1.4", features = ["bundled", "vtab-arrow"] }
parquet = { version = "56", default-features = false, features = ["arrow", "snap"] }
bytes = "1"
postgres = "0.19"
rusqlite = { version = "0.38", features = ["bundled", "chrono", "functions", "window"] }

# ODBC
odbc-api = "13"
toml_edit = "0.22"

# Writers
plotters = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Testing
proptest = "1.4"

# Color interpolation
palette = "0.7"

# Spatial
geozero = { version = "0.14", default-features = false }
hex = "0.4"

# Utilities
regex = "1.10"
chrono = "0.4"
rand = "0.8"
const_format = "0.2"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.35", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
