[package]
name = "ggsql-jupyter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Jupyter kernel for ggsql"

[[bin]]
name = "ggsql-jupyter"
path = "src/main.rs"

[lib]
name = "ggsql_jupyter"
path = "src/lib.rs"

[dependencies]
# Core ggsql library
ggsql = { workspace = true, features = ["duckdb", "vegalite"] }

# Arrow for DataFrame array types
arrow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Jupyter kernel - we'll try zeromq approach first since it's proven
zeromq = { version = "0.4", features = ["tokio-runtime", "tcp-transport"] }
bytes = "1.0"

# Message authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID for message IDs
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["all-readers"]
all-readers = ["sqlite", "odbc", "duckdb"]
odbc = ["ggsql/odbc"]
sqlite = ["ggsql/sqlite"]
duckdb = ["ggsql/duckdb"]

[dev-dependencies]
# Test utilities
tokio-test = "0.4"
tempfile = "3.8"
