[package]
name = "ggsql-python"
version = "0.2.3"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for ggsql"

[lib]
name = "_ggsql"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py310"] }
polars = { workspace = true, features = ["ipc"] }
ggsql = { path = "../src", default-features = false, features = ["duckdb", "vegalite"] }

[features]
default = []
