[package]
name = "ggsql-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for ggsql."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
csv = "1"
arrow = { workspace = true }
ggsql = { path = "../src", default-features = false, features = ["vegalite", "sqlite", "builtin-data"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.35", default-features = false }
sqlite-wasm-rs = "0.5.2"
# Transitive dep feature overrides for wasm32-unknown-unknown.
# Cargo's feature unification activates these on the transitive deps.
# - getrandom: pulled in by arrow (via ahash/const-random), needs "js" for wasm
# - uuid: pulled in by ggsql, needs "js" to obtain randomness on wasm
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }

