[package]
name = "ggsql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
name = "ggsql"
path = "lib.rs"

[[bin]]
name = "ggsql"
path = "cli.rs"

[dependencies]
# Parsing
tree-sitter.workspace = true
tree-sitter-ggsql = { workspace = true }
csscolorparser.workspace = true

# Color interpolation
palette.workspace = true

# Arrow (core data container)
arrow = { workspace = true }

# Readers
duckdb = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
odbc-api = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
bytes = { workspace = true }

# Writers
plotters = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI and error handling
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Utilities
regex.workspace = true
chrono.workspace = true
rand.workspace = true
sprintf = "0.4"
const_format.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema = "0.44"
proptest.workspace = true
tempfile = "3.8"
ureq = "3"

[features]
default = ["duckdb", "sqlite", "vegalite", "ipc", "parquet", "builtin-data", "odbc"]
ipc = []
duckdb = ["dep:duckdb"]
parquet = ["dep:parquet"]
postgres = ["dep:postgres"]
sqlite = ["dep:rusqlite"]
odbc = ["dep:odbc-api", "dep:toml_edit"]
vegalite = []
ggplot2 = []
builtin-data = []
all-readers = ["duckdb", "postgres", "sqlite", "odbc"]
all-writers = ["vegalite", "ggplot2", "plotters"]

# cargo-packager configuration for cross-platform installers
[package.metadata.packager]
product-name = "ggsql"
identifier = "com.ggsql.app"
category = "DeveloperTool"
publisher = "ggsql Team"
authors = ["ggsql Team"]
icons = ["../doc/assets/logo.png"]
license-file = "../LICENSE.md"
out-dir = "target/release/packager"
homepage = "https://ggsql.org/"
description = "SQL extension for declarative data visualization"
long-description = "ggsql extends SQL with a VISUALISE clause for declarative data visualization based on Grammar of Graphics principles. Combine SQL queries with visualization specifications to create charts directly from your data."
copyright = "Copyright (c) 2026 ggsql Team"

# Binaries to include in the package
binaries = [
  { path = "ggsql", main = true },
  { path = "ggsql-jupyter", main = false },
]

# Resources to bundle (optional)
resources = [{ src = "../libs/", target = "libs" }]
