[package]
name = "ggsql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
name = "ggsql"
path = "lib.rs"

[dependencies]
# Parsing
tree-sitter.workspace = true
tree-sitter-ggsql = { workspace = true }
csscolorparser.workspace = true

# Color interpolation
palette.workspace = true

# Arrow (core data container)
arrow = { workspace = true }

# Readers
duckdb = { workspace = true, optional = true }
postgres = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
odbc-api = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
bytes = { workspace = true }

# Writers
plotters = { workspace = true, optional = true }

# Spatial
geozero = { workspace = true, optional = true, features = ["with-wkb", "with-geojson"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
regex.workspace = true
chrono.workspace = true
rand.workspace = true
sprintf = "0.4"
const_format.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema = "0.44"
proptest.workspace = true
tempfile = "3.8"
ureq = "3"

[features]
default = ["duckdb", "sqlite", "vegalite", "ipc", "parquet", "builtin-data", "odbc", "spatial"]
ipc = []
duckdb = ["dep:duckdb"]
parquet = ["dep:parquet"]
postgres = ["dep:postgres"]
sqlite = ["dep:rusqlite"]
odbc = ["dep:odbc-api", "dep:toml_edit"]
spatial = ["dep:geozero"]
vegalite = []
ggplot2 = []
builtin-data = []
all-readers = ["duckdb", "postgres", "sqlite", "odbc"]
all-writers = ["vegalite", "ggplot2", "plotters"]
