[package]
name = "ggsql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
name = "ggsql"
path = "lib.rs"

[dependencies]
# Parsing
tree-sitter.workspace = true
tree-sitter-ggsql = { workspace = true }
csscolorparser.workspace = true

# Color interpolation
palette.workspace = true

# Arrow (core data container)
arrow = { workspace = true }

# Readers
duckdb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }
bytes = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
regex.workspace = true
chrono.workspace = true
rand.workspace = true
sprintf = "0.4"
const_format.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema = { version = "0.44", default-features = false, features = ["resolve-file"] }
tempfile = "3.8"
ureq = "3"

[features]
default = ["duckdb", "sqlite", "vegalite", "parquet", "builtin-data", "odbc"]
duckdb = ["dep:duckdb"]
parquet = ["dep:parquet"]
sqlite = ["dep:rusqlite"]
odbc = ["dep:toml_edit", "dep:libloading"]
vegalite = []
builtin-data = []
all-readers = ["duckdb", "sqlite", "odbc"]
