[package]
name = "tree-sitter-ggsql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter grammar for ggsql visualization language"
build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter.workspace = true

[build-dependencies]
cc = "1.0"
