[build-system]
requires = ["setuptools>=45", "wheel", "tree-sitter>=0.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ggsql"
version = "0.1.0"
description = "Tree-sitter grammar for ggsql visualization language"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ggsql Team", email = "team@ggsql.org"}]
keywords = ["tree-sitter", "parser", "sql", "visualization", "grammar-of-graphics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "tree-sitter>=0.20.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/georgestagg/ggsql"
Repository = "https://github.com/georgestagg/ggsql.git"
Issues = "https://github.com/georgestagg/ggsql/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["bindings/python"]

[tool.setuptools.package-data]
tree_sitter_ggsql = ["*.so", "*.dll", "*.dylib", "py.typed"]
